# Convey-Game-of-Life

./: .gitignore  CMakeLists.txt  ImGUIDemoConfig.h.in  README.md  main.cpp
include/glad/: glad.c  glad.h
include/imgui/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_tables.cpp  imgui_widgets.cpp
src/: CMakeLists.txt  Game.cpp  Game.h  GameLevel.cpp  GameLevel.h  GameObject.cpp  GameObject.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h
src/levels/: seed.lvl
src/shaders/: sprite.fs  sprite.vs
